# docai-hf-rs

./: .gitignore  Cargo.toml  README.md  WasmEdge-0.13.4-src.tar.gz.1
.cargo/: config.toml
examples/: document_classification.rs
scripts/: env.sh  wasmedge-init.sh
src/: error.rs  lib.rs
src/postprocess/: mod.rs
src/postprocess/containers/: classification_result.rs  mod.rs
src/postprocess/label_assets/: dit_classification_classes.rs  mod.rs
src/postprocess/output_processor/: classification_output_processor.rs  common.rs  mod.rs
src/preprocess/: mod.rs
src/preprocess/image_processor/: common.rs  mod.rs
src/tasks/: mod.rs
src/tasks/common/: mod.rs
src/tasks/common/options/: base_task_options.rs  mod.rs
src/tasks/document_classification/: builder.rs  mod.rs
src/util/: shared_slice.rs
